--- a/resume.html
+++ b/resume.html
@@ -39,7 +39,7 @@
     </main>
     <button onclick="window.print()">Print/Save as PDF</button>
     <footer>
-        <p>© 2024 Uday. All rights reserved.</p>
+        <p>© 2024 Babu. All rights reserved.</p>
     </footer>
 
 </body>
